Fix FME alignment.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1113,7 +1113,7 @@ a.no-style:visited {
 }
 
 .fme-container.fme-menu-opened {
-    left: 385px;
+    left: 395px;
 }
 
 .fme-container .fme-card {
